Fix image aspect-ratio on narrow screens

--- a/style.css
+++ b/style.css
@@ -60,6 +60,8 @@ pre {
 img {
   border: 0;
   max-width: 100%;
+  height: auto;
+  aspect-ratio: attr(width) / attr(height);
 }
 
 figure {
